# SpyCBlockRPC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  ClientBitcoinSingleton.cpp  ClientBitcoinSingleton.h  ConfiguratorSingleton.cpp  ConfiguratorSingleton.h  LICENSE  Makefile  SpyCBlockRPC  SpyCBlockRPC.cbp  bitcoinrpc.properties  conf-rpc.properties  main.cpp
commands/: DecodeBlockAtIndexCommand.cpp  DecodeBlockAtIndexCommand.h  DecodeRawTransaction.cpp  DecodeRawTransaction.h  DecodeScriptCommand.cpp  DecodeScriptCommand.h  HeightBlockchainCommand.cpp  HeightBlockchainCommand.h  IRPCCommand.h  RPCCommandMediator.h
core/graph/: ITransactionGraph.h  TransactionGraph.cpp  TransactionGraph.h  WrapperInformations.cpp  WrapperInformations.h
src/: ConfiguratorSingleton.cpp  ConfiguratorSingleton.h  DefinitionMacro.h  SpyCBlockRPCException.h  main.cpp
src/commands/: DecodeBlockAtIndexCommand.cpp  DecodeBlockAtIndexCommand.h  DecodeRawTransaction.cpp  DecodeRawTransaction.h  DecodeScriptCommand.cpp  DecodeScriptCommand.cpp.autosave  DecodeScriptCommand.h  HeightBlockchainCommand.cpp  HeightBlockchainCommand.h  IRPCCommand.h  RPCCommandMediator.h
src/core/graph/: ITransactionGraph.h  TransactionGraph.cpp  TransactionGraph.h  WrapperInformations.cpp  WrapperInformations.h  irpccommand.h
storage/: genesisBlockRpc.json
test/: DecodeRawTransactionCommand.cpp  DecodeScriptCommandTest.cpp  RPCCOmmandMediatorTest.cpp  SerializationMockTest.cpp
uml/: classDiagram.zargo  classDiagram.zargo~
